--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "dnd-5e-front",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "element-plus": "^2.3.4",
+    "postcss-px2rem": "^0.3.0",
+    "vue": "^3.2.47",
+    "vue-router": "^4.2.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "less": "^4.1.3",
     "vite": "^4.3.2"
   }
 }
